# veritrix-sdk

./: .gitignore  README.md  pyproject.toml
examples/: README.md  customer_support_agent.ipynb  getting_started.ipynb
tests/: conftest.py  test_buffer.py  test_client.py  test_config.py  test_http_transport.py  test_integrations.py  test_integrations_optional.py  test_pricing.py  test_session.py  test_session_end.py  test_tracer.py  test_usage.py
veritrix/: __init__.py  buffer.py  client.py  config.py  pricing.py  session.py  span.py  tracer.py  usage.py
veritrix/integrations/: __init__.py  crewai.py  langchain.py
